google: Handle multivalue custom vcard attributes

We use this by vcard escaping the individual attributes and joining them
with a comma. Then we name the attribute with a -MULTIVALUE prefix in order
to not confuse things with previously stored single-value attributes.

https://bugzilla.gnome.org/show_bug.cgi?id=659553